--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -19,14 +19,22 @@
         <td><%= link_to book.title,book %></td>
         <td><%= book.body %></td>
         <td>
-          <%= form_with model:favorite,local:true do |f| %>
-
-              <%= link_to favorites_path, method: :post do %>
-                <i class="fas fa-heart"></i>
+          <% if book.favorited_by?(current_user) %>
+            <p>
+              <%= link_to book_favorites_path(book), method: :delete, class: "text-danger" do %>
+                <i class="fas fa-heart"></i><%= book.favorites.count %>
               <% end %>
-
-
+            </p>
+            <% else %>
+            <p>
+              <%= link_to book_favorites_path(book), method: :post do %>
+                <i class="fas fa-heart"></i><%= book.favorites.count %>
+              <% end %>
+            </p>
           <% end %>
+        </td>
+        <td>
+          コメント数
         </td>
       </tr>
     <% end %>
