--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -34,7 +34,7 @@
           <% end %>
         </td>
         <td>
-          コメント数
+          コメント数:<%= book.book_comments.count %>
         </td>
       </tr>
     <% end %>
