--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -32,13 +32,31 @@
               </p>
             <% end %>
           </td>
-          <td>コメント数:</td>
+          <td>コメント数:<%= @book.book_comments.count %></td>
           <% if @book.user == current_user %>
             <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
             <td><%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
           <% end %>
         </tr>
       </table>
+      <% @book.book_comments.each do |book_comment| %>
+      <table>
+        <td>
+          <%= link_to(@book.user) do %>
+            <%= image_tag book_comment.user.get_profile_image, size:"100x100" %><br/>
+            <%= @book.user.name %>
+          <% end %>
+        </td>
+        <td>
+          <%= book_comment.comment %>
+        </td>
+        <td>
+          <% if book_comment.user == current_user %>
+            <%= link_to "Destroy", book_book_comment_path(book_comment.book, book_comment), method: :delete, class: "btn btn-sm btn-danger" %>
+          <% end %>
+        </td>
+      </table>
+      <% end %>
       <%= form_with model: [@book, @book_comment] do |f| %>
       <div class="form-group">
         <%= f.text_area :comment, rows: '5', class: 'form-control' %>
