--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -8,9 +8,28 @@
 	  <th>introduction</th>
 	  <th><%= user.introduction %></th>
   </tr>
+  <tr>
+    <th>follows</th>
+    <th></th>
+  </tr>
+  <tr>
+    <th>followers</th>
+    <th></th>
+  </tr>
 </table>
 <% if user.name != "guestuser" %>
   <div class='row'>
+    <% if user != current_user %>
+      <% if user.is_followed_by?(current_user) %>
+        <%= link_to user_relationships_path(user), method: :delete do %>
+          <button class="btn btn-danger">フォロー外す</button>
+        <% end %>
+      <% else %>
+        <%= link_to user_relationships_path(user), method: :post do %>
+          <button class="btn btn-primary">フォローする</button>
+        <% end %>
+      <% end %>
+    <% end %>
     <%= link_to edit_user_path(user), class: "btn btn-outline-secondary btn-block" do %>
       <i class="fas fa-user-cog"></i>
     <% end %>
