[add]フォロー一覧,フォロワー一覧

--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -10,11 +10,11 @@
   </tr>
   <tr>
     <th>follows</th>
-    <th></th>
+    <th><%= link_to user.follower.count, followings_user_path(user) %></th>
   </tr>
   <tr>
     <th>followers</th>
-    <th></th>
+    <th><%= link_to user.followed.count, followers_user_path(user) %></th>
   </tr>
 </table>
 <% if user.name != "guestuser" %>
