--- a/app/views/users/_index.html.erb
+++ b/app/views/users/_index.html.erb
@@ -4,6 +4,9 @@
       <th>image</th>
       <th>name</th>
       <th colspan="3"></th>
+      <th colspan="3"></th>
+      <th colspan="3"></th>
+      <th colspan="3"></th>
     </tr>
   </thead>
   <tbody>
@@ -11,6 +14,8 @@
       <tr>
         <td><%= image_tag user.get_profile_image, size: '50x50' %></td>
         <td><%= user.name %></td>
+        <td>フォロー数 : <%= user.follower.count %></td>
+        <td>フォロワー数 : <%= user.followed.count %></td>
         <td><%= link_to 'Show', user %></td>
       </tr>
     <% end %>
