--- a/app/views/users/_index.html.erb
+++ b/app/views/users/_index.html.erb
@@ -3,10 +3,7 @@
     <tr>
       <th>image</th>
       <th>name</th>
-      <th colspan="3"></th>
-      <th colspan="3"></th>
-      <th colspan="3"></th>
-      <th colspan="3"></th>
+      <th colspan="6"></th>
     </tr>
   </thead>
   <tbody>
@@ -16,6 +13,19 @@
         <td><%= user.name %></td>
         <td>フォロー数 : <%= user.follower.count %></td>
         <td>フォロワー数 : <%= user.followed.count %></td>
+        <td>
+          <% if user != current_user %>
+            <% if user.is_followed_by?(current_user) %>
+              <%= link_to user_relationships_path(user), method: :delete do %>
+                フォロー外す
+              <% end %>
+            <% else %>
+              <%= link_to user_relationships_path(user), method: :post do %>
+                フォローする
+              <% end %>
+            <% end %>
+          <% end %>
+        </td>
         <td><%= link_to 'Show', user %></td>
       </tr>
     <% end %>
