--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -17,20 +17,8 @@
           </td>
           <td><%= link_to @book.title, @book %></td>
           <td><%= @book.body %></td>
-          <td>
-            <% if @book.favorited_by?(current_user) %>
-              <p>
-                <%= link_to book_favorites_path(@book), method: :delete, class: "text-danger" do %>
-                  <i class="fas fa-heart"></i><%= @book.favorites.count %>
-                <% end %>
-              </p>
-              <% else %>
-              <p>
-                <%= link_to book_favorites_path(@book), method: :post do %>
-                  <i class="fas fa-heart"></i><%= @book.favorites.count %>
-                <% end %>
-              </p>
-            <% end %>
+          <td id="favorite_btn_<%= @book.id %>">
+            <%= render '/favorites/favorite', book: @book %>
           </td>
           <td>コメント数:<%= @book.book_comments.count %></td>
           <% if @book.user == current_user %>
@@ -39,24 +27,7 @@
           <% end %>
         </tr>
       </table>
-      <% @book.book_comments.each do |book_comment| %>
-      <table>
-        <td>
-          <%= link_to(@book.user) do %>
-            <%= image_tag book_comment.user.get_profile_image, size:"100x100" %><br/>
-            <%= @book.user.name %>
-          <% end %>
-        </td>
-        <td>
-          <%= book_comment.comment %>
-        </td>
-        <td>
-          <% if book_comment.user == current_user %>
-            <%= link_to "Destroy", book_book_comment_path(book_comment.book, book_comment), method: :delete, class: "btn btn-sm btn-danger" %>
-          <% end %>
-        </td>
-      </table>
-      <% end %>
+      <%= render "/books/book_comments", book: @book %>
       <%= form_with model: [@book, @book_comment] do |f| %>
       <div class="form-group">
         <%= f.text_area :comment, rows: '5', class: 'form-control' %>
