--- a/app/views/books/_book_comments.html.erb
+++ b/app/views/books/_book_comments.html.erb
@@ -11,8 +11,16 @@
     </td>
     <td>
       <% if book_comment.user == current_user %>
-        <%= link_to "Destroy", book_book_comment_path(book_comment.book, book_comment), method: :delete, class: "btn btn-sm btn-danger" %>
+        <%= link_to "Destroy", book_book_comment_path(book_comment.book, book_comment), method: :delete, remote: true, class: "btn btn-sm btn-danger" %>
       <% end %>
     </td>
   </table>
+<% end %>
+<%= form_with model: [@book, @book_comment],local: false do |f| %>
+<div class="form-group">
+  <%= f.text_area :comment, rows: '5', class: 'form-control' %>
+</div>
+<div class="form-group">
+  <%= f.submit "送信" %>
+</div>
 <% end %>
