[add]コメントの非同期通信（問題あり）

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -28,7 +28,7 @@
         </tr>
       </table>
       <div id="comments">
-        <%= render "/books/book_comments", book: @book, book_comment: @book_comment %>
+        <%= render "/book_comments/book_comments", book: @book, book_comment: @book_comment %>
       </div>
     </div>
   </div>
