--- a/app/views/book_comments/_book_comments.html.erb
+++ b/app/views/book_comments/_book_comments.html.erb
@@ -16,11 +16,11 @@
     </td>
   </table>
 <% end %>
-<%= form_with model: [@book, @book_comment],local: false do |f| %>
-<div class="form-group">
-  <%= f.text_area :comment, rows: '5', class: 'form-control' %>
-</div>
-<div class="form-group">
-  <%= f.submit "送信" %>
-</div>
+<%= form_with(model: [book, book_comment],local: false) do |f| %>
+  <div class="form-group">
+    <%= f.text_area :comment, rows: '5', class: 'form-control' %>
+  </div>
+  <div class="form-group">
+    <%= f.submit "送信" %>
+  </div>
 <% end %>
