--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,6 +3,22 @@
     <div class='col-md-3'>
       <h2>User info</h2>
       <%= render 'info', user: @user %>
+      <!--ここからDM-->
+      <% unless @user.id == current_user.id %>
+
+        <% if @is_room == true %>
+          <%= link_to 'chatを始める', room_path(@room_id) %>
+        <% else %>
+          <%= form_with @room do |f| %>
+            <%= fields_for @entry do |e| %>
+              <% e.hidden_field :user_id, value: @user.id %>
+            <% end %>
+            <%= f.submit "chatを始める", class: "btn" %>
+          <% end %>
+        <% end %>
+
+      <% end %>
+      <!--ここまでDM-->
       <h2 class="mt-3">New book</h2>
       <%= render 'books/form', book: @book %>
     </div>
