--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,18 +5,18 @@
       <%= render 'info', user: @user %>
       <!--ここからDM-->
       <% unless @user.id == current_user.id %>
-
+        <% if (current_user.is_followed_by? @user) && (@user.is_followed_by? current_user) %>
         <% if @is_room == true %>
           <%= link_to 'chatを始める', room_path(@room_id) %>
         <% else %>
-          <%= form_with @room do |f| %>
+          <%= form_with model: @room do |f| %>
             <%= fields_for @entry do |e| %>
               <% e.hidden_field :user_id, value: @user.id %>
             <% end %>
             <%= f.submit "chatを始める", class: "btn" %>
           <% end %>
         <% end %>
-
+        <% end %>
       <% end %>
       <!--ここまでDM-->
       <h2 class="mt-3">New book</h2>
