--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -1,6 +1,7 @@
 <div class='container px-5 px-sm-0'>
   <div class='row'>
     <div class='col-md-3'>
+      <h2><%= "#{@user.name}さんとのチャット" %></h2>
       <div class="chat">
         <% if @messages.present? %>
           <% @messages.each do |m| %>
