--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -25,7 +25,7 @@
           コメント数:<%= book.book_comments.count %>
         </td>
         <td>
-          閲覧数: <%= book.view_counts.count %>
+          閲覧数: <%= book.impressions_count %>
         </td>
       </tr>
     <% end %>
