--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -6,7 +6,7 @@
       <th>Opinion</th>
       <th></th>
       <th></th>
-      <th colspan="5"></th>
+      <th colspan="6"></th>
     </tr>
   </thead>
   <tbody>
@@ -26,6 +26,22 @@
         </td>
         <td>
           閲覧数: <%= book.impressions_count %>
+        </td>
+        <td>
+          <div id="index_raty_<%= book.id %>"></div>
+          <script>
+            $('#index_raty_<%= book.id %>').empty(); //一旦星を空にする（prev,nextの星増殖対策)
+            // scriptファイルをどのidの部分に配置するかを指定
+            var elem = document.querySelector('#index_raty_<%= book.id %>');
+            var opt = {
+              starOn: "<%= asset_path('star-on.png') %>",
+              starOff: "<%= asset_path('star-off.png') %>",
+              starHalf: "<%=asset_path('star-half.png') %>",
+              readOnly: true,
+              score: <%= book.evaluation %>
+             };
+            raty(elem,opt);
+          </script>
         </td>
       </tr>
     <% end %>
