--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -7,6 +7,10 @@
     <%= f.label :opinion %>
     <%= f.text_area :body, class: 'form-control book_body' %>
   </div>
+  <div class="form-group">
+    <%= f.label "Tag" %>
+    <%= f.text_field :name,value: @tag_list, class: "form-control" %>
+  </div>
   <% if current_page?("/books/#{book.id}/edit") %>
     <div id="edit_raty">
       <label>Rate</label>
