--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -4,6 +4,7 @@
       <th></th>
       <th>Title</th>
       <th>Opinion</th>
+      <th>Tag</th>
       <th></th>
       <th></th>
       <th colspan="6"></th>
@@ -18,6 +19,9 @@
         </td>
         <td><%= link_to book.title,book %></td>
         <td><%= book.body %></td>
+        <td>
+          <%= book.tags.map(&:name).join(', ') %> <!--配列になっているtagsを一つずつ取り出して表示する -->
+        </td>
         <td id="favorite_btn_<%= @book.id %>">
           <%= render '/favorites/favorite', book: book %>
         </td>
