--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -17,6 +17,11 @@
           </td>
           <td><%= link_to @book.title, @book %></td>
           <td><%= @book.body %></td>
+          <td>
+            <% @book_tags.each do |tag| %>
+              <%= tag.name %><%= "(#{tag.books.count})" %>
+            <% end %>
+          </td>
           <td id="favorite_btn_<%= @book.id %>">
             <%= render '/favorites/favorite', book: @book %>
           </td>
