--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -20,7 +20,7 @@
         <td><%= link_to book.title,book %></td>
         <td><%= book.body %></td>
         <td>
-          <%= book.tags.map(&:name).join(', ') %> <!--配列になっているtagsを一つずつ取り出して表示する -->
+          <%= link_to book.tags.map(&:name).join(', ') %> <!--配列になっているtagsを一つずつ取り出して表示する -->
         </td>
         <td id="favorite_btn_<%= @book.id %>">
           <%= render '/favorites/favorite', book: book %>
