--- a/app/views/layouts/_search.html.erb
+++ b/app/views/layouts/_search.html.erb
@@ -6,8 +6,10 @@
       <%= f.select :search, options_for_select([["完全一致","perfect_match"], ["前方一致","forward_match"], ["後方一致","backward_match"], ["部分一致","partial_match"]]) %>
       <%= f.submit "検索" %>
     <% end %>
-    <%= form_with url: tag_search_path, local: true, method: :get do |f| %>
+    <%= form_with url: search_path, local: true, method: :get do |f| %>
       <%= f.text_field :word %>
+      <%= f.hidden_field :range, :value => "tag" %>
+      <%= f.hidden_field :search, :value => "perfect_match" %>
       <%= f.submit "タグ検索" %>
     <% end %>
   </div>
