--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -20,7 +20,10 @@
         <td><%= link_to book.title,book %></td>
         <td><%= book.body %></td>
         <td>
-          <%= link_to book.tags.map(&:name).join(', ') %> <!--配列になっているtagsを一つずつ取り出して表示する -->
+          <% book_tags = book.tags %>
+          <% book_tags.each do |tag| %>
+            <%= link_to tag.name, search_path(word: tag.name, range:"tag", search: "perfect_match") %>
+          <% end %>
         </td>
         <td id="favorite_btn_<%= book.id %>">
           <%= render '/favorites/favorite', book: book %>
