--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -19,9 +19,7 @@
           <td><%= @book.body %></td>
           <td>
             <% @book_tags.each do |tag| %>
-              <%= link_to tag.name do %>
-                <%= tag.name %><%= "(#{tag.books.count})" %>
-              <% end %>
+              <%= link_to tag.name, search_path(word: tag.name, range:"tag", search: "perfect_match") %>
             <% end %>
           </td>
           <td id="favorite_btn_<%= @book.id %>">
